--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,7 @@ import Icon from '../components/Icon.astro';
 				<img
 					width="1553"
 					height="873"
-					src="/assets/at-work.jpg"
+					src={import.meta.env.BASE_URL + '/assets/at-work.jpg'}
 					alt="Linji Wang working on AI research"
 				/>
 			</Hero>
