--- a/src/pages/work/[...slug].astro
+++ b/src/pages/work/[...slug].astro
@@ -44,7 +44,7 @@ const { Content } = await render(entry);
 			</header>
 			<main class="wrapper">
 				<div class="stack gap-10 content">
-					{entry.data.img && <img src={entry.data.img} alt={entry.data.img_alt || ''} />}
+					{entry.data.img && <img src={entry.data.img.startsWith('/') ? import.meta.env.BASE_URL + entry.data.img.slice(1) : entry.data.img} alt={entry.data.img_alt || ''} />}
 					<div class="content">
 						<Content />
 					</div>
