--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -36,8 +36,8 @@ const basePath = import.meta.env.BASE_URL;
 		<style>
 			:root {
 				--_placeholder-bg: linear-gradient(transparent, transparent);
-				--bg-image-main: url('/linjiwang/assets/backgrounds/bg-main-light-800w.jpg');
-				--bg-image-main-curves: url('/linjiwang/assets/backgrounds/bg-main-light.svg');
+				--bg-image-main: var(--_placeholder-bg);
+				--bg-image-main-curves: var(--_placeholder-bg);
 				--bg-image-subtle-1: var(--_placeholder-bg);
 				--bg-image-subtle-2: var(--_placeholder-bg);
 				--bg-image-footer: var(--_placeholder-bg);
@@ -50,8 +50,8 @@ const basePath = import.meta.env.BASE_URL;
 			}
 
 			:root.theme-dark {
-				--bg-image-main: url('/linjiwang/assets/backgrounds/bg-main-dark-800w.jpg');
-				--bg-image-main-curves: url('/linjiwang/assets/backgrounds/bg-main-dark.svg');
+				--bg-image-main: var(--_placeholder-bg);
+				--bg-image-main-curves: var(--_placeholder-bg);
 				--bg-svg-blend-mode: darken;
 				--bg-blend-mode: lighten;
 			}
@@ -59,53 +59,42 @@ const basePath = import.meta.env.BASE_URL;
 			/* These backgrounds are displayed below the fold, so we lazy load them
 			   once the `.loaded` class has been set.  */
 			:root.loaded {
-				--bg-image-subtle-1: url('/linjiwang/assets/backgrounds/bg-subtle-1-light-800w.jpg');
-				--bg-image-subtle-2: url('/linjiwang/assets/backgrounds/bg-subtle-2-light-800w.jpg');
-				--bg-image-footer: url('/linjiwang/assets/backgrounds/bg-footer-light-800w.jpg');
+				--bg-image-subtle-1: var(--_placeholder-bg);
+				--bg-image-subtle-2: var(--_placeholder-bg);
+				--bg-image-footer: var(--_placeholder-bg);
 			}
 			:root.loaded.theme-dark {
-				--bg-image-subtle-1: url('/linjiwang/assets/backgrounds/bg-subtle-1-dark-800w.jpg');
-				--bg-image-subtle-2: url('/linjiwang/assets/backgrounds/bg-subtle-2-dark-800w.jpg');
-				--bg-image-footer: url('/linjiwang/assets/backgrounds/bg-footer-dark-800w.jpg');
+				--bg-image-subtle-1: var(--_placeholder-bg);
+				--bg-image-subtle-2: var(--_placeholder-bg);
+				--bg-image-footer: var(--_placeholder-bg);
 			}
 
 			@media (min-width: 50em) {
 				:root {
 					--bg-scale: 1;
-					--bg-image-main: url('/linjiwang/assets/backgrounds/bg-main-light-1440w.jpg');
+					--bg-image-main: var(--_placeholder-bg);
 				}
 				:root.theme-dark {
-					--bg-image-main: url('/linjiwang/assets/backgrounds/bg-main-dark-1440w.jpg');
+					--bg-image-main: var(--_placeholder-bg);
 				}
 
 				:root.loaded {
-					--bg-image-subtle-1: url('/linjiwang/assets/backgrounds/bg-subtle-1-light-1440w.jpg');
-					--bg-image-subtle-2: url('/linjiwang/assets/backgrounds/bg-subtle-2-light-1440w.jpg');
-					--bg-image-footer: url('/linjiwang/assets/backgrounds/bg-footer-light-1440w.jpg');
+					--bg-image-subtle-1: var(--_placeholder-bg);
+					--bg-image-subtle-2: var(--_placeholder-bg);
+					--bg-image-footer: var(--_placeholder-bg);
 				}
 				:root.loaded.theme-dark {
-					--bg-image-subtle-1: url('/linjiwang/assets/backgrounds/bg-subtle-1-dark-1440w.jpg');
-					--bg-image-subtle-2: url('/linjiwang/assets/backgrounds/bg-subtle-2-dark-1440w.jpg');
-					--bg-image-footer: url('/linjiwang/assets/backgrounds/bg-footer-dark-1440w.jpg');
+					--bg-image-subtle-1: var(--_placeholder-bg);
+					--bg-image-subtle-2: var(--_placeholder-bg);
+					--bg-image-footer: var(--_placeholder-bg);
 				}
 			}
 
 			.backgrounds {
 				min-height: 100%;
 				isolation: isolate;
-				background:
-					/*noise*/
-					url('/linjiwang/assets/backgrounds/noise.png') top center/220px repeat,
-					/*footer*/ var(--bg-image-footer) bottom center/var(--bg-gradient-size) no-repeat,
-					/*header1*/ var(--bg-image-main-curves) top center/var(--bg-gradient-size) no-repeat,
-					/*header2*/ var(--bg-image-main) top center/var(--bg-gradient-size) no-repeat,
-					/*base*/ var(--gray-999);
-				background-blend-mode: /*noise*/
-					overlay,
-					/*footer*/ var(--bg-blend-mode),
-					/*header1*/ var(--bg-svg-blend-mode),
-					/*header2*/ normal,
-					/*base*/ normal;
+				background: var(--gray-999);
+				background-blend-mode: normal;
 			}
 			@media (forced-colors: active) {
 				/* Deactivate custom backgrounds for high contrast users. */
