--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -165,11 +165,8 @@ const projects = (await getCollection('work'))
 		aspect-ratio: calc(2.25 / var(--bg-scale));
 		top: 0;
 		transform: translateY(-75%) translateX(-50%);
-		background:
-			url('/linjiwang/assets/backgrounds/noise.png') top center/220px repeat,
-			var(--hero-bg) center center / var(--bg-gradient-size) no-repeat,
-			var(--gray-999);
-		background-blend-mode: overlay, normal, normal, normal;
+		background: var(--gray-999);
+		background-blend-mode: normal;
 		mix-blend-mode: var(--bg-blend-mode);
 		z-index: -1;
 	}
